correcion de mq en el nav bar y adhesion de menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
         <h1>LORETO GUEST HOUSE YAYETOPA</h1>
         <p>Tu hogar lejos de casa</p>
       </div>
+
+      <!-- menu bamburguesa -->
+      <div class="dropdown menu-hamburguesa">
+        <a
+          class="btn btn-secondary dropdown-toggle"
+          href="#"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Dropdown link
+        </a>
+
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div>
     </header>
 
     <!-- principal -->
