--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- icono del sitio -->
+    <link
+      rel="icon"
+      href="../img/logos/perfil facebook 170px x 170px.jpg"
+      type="image/x-icon"
+    />
+
     <!-- Style -->
     <link rel="stylesheet" href="./css/main.css" />
 
@@ -23,7 +30,7 @@
       <div class="header-top">
         <div class="logo-header">
           <img
-            src="./img/logos/perfil_facebook_170px_x_170px-removebg-preview.png"
+            src="./img/logos/logo-blanco.png"
             alt="Logo de Loreto Guest House Yayetopa"
           />
         </div>
@@ -69,7 +76,7 @@
 
     <!-- principal -->
     <main>
-      <!-- seccion 1 -->
+      <!-- Seccion 1: texto -->
       <section>
         <div class="texto-section1">
           <h2>
@@ -77,12 +84,12 @@
             el Iberá te abraza.
           </h2>
           <p>
-            Aquí, donde el agua espeja el cielo y la tierra respira vida, no
+            Aquí, donde el agua se une con el cielo y la tierra respira vida, no
             eres un turista: eres parte del ciclo. <br />
-            Alójate con quienes comprenden tu pasión por lo salvaje. <br />
-            Duerme escuchando a los monjitas cantar. <br />
+            Alójate con quienes comprenden tu pasión por la naturaleza. <br />
+            Duerme escuchando a los zorzales cantar. <br />
             Despiértate con el rocío dibujando huellas efímeras. <br />
-            Jajotopa: porque el verdadero viaje es el que nos devuelve a
+            Yayetopa: porque el verdadero viaje es el que nos devuelve a
             nosotros mismos.
           </p>
           <a class="btn btn-primary" href="#" role="button">Reservá ahora</a>
@@ -103,7 +110,7 @@
         </div>
       </section>
 
-      <!-- Seccion 3: Galeria -->
+      <!-- Seccion 2a: Galeria -->
       <div class="container my-5">
         <div class="row justify-content-center">
           <!-- jabiru -->
@@ -111,7 +118,7 @@
             <div class="card" style="width: 100%">
               <img
                 src="./img/habitaciones/jabiru.jpg"
-                class="card-img-top"
+                class="card-img-top w-100"
                 alt="..."
               />
               <div class="card-body">
@@ -120,7 +127,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card’s content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="./pages/habitaciones.html" class="btn btn-primary"
+                  >Ir a Habitaciones</a
+                >
               </div>
             </div>
           </div>
@@ -129,7 +138,7 @@
           <div class="col-md-4 mb-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/habitaciones/yetapa.jpg"
+                src="./img/habitaciones/yetapa-baja.jpg"
                 class="card-img-top"
                 alt="..."
               />
@@ -139,7 +148,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card’s content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="./pages/habitaciones.html" class="btn btn-primary"
+                  >Ir a Habitaciones</a
+                >
               </div>
             </div>
           </div>
@@ -158,7 +169,9 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card’s content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="./pages/habitaciones.html" class="btn btn-primary"
+                  >Ir a Habitaciones</a
+                >
               </div>
             </div>
           </div>
@@ -170,7 +183,7 @@
         >
       </div>
 
-      <!-- Seccion 4: areas comunes -->
+      <!-- Seccion 3: areas comunes -->
       <section class="texto-areas-comunes">
         <div class="texto-section4">
           <h2>Areas comunes</h2>
@@ -181,12 +194,12 @@
         </div>
       </section>
 
-      <!-- Seccion parrafo -->
+      <!-- Seccion 3.a: texto -->
       <section class="parrafo-areas-comunes">
         <p>
           Refrescate en la piscina, comparte historias en los cómodos sofás de
           la sala o <br />
-          disfruta un asado bajo las estrellas en la parrilla comunitaria.
+          disfruta un asado bajo las estrellas en la parrilla.
           <br />
           Los corredores sombreados y el jardín con casitas de pájaros te
           conectan con la naturaleza, <br />
@@ -197,7 +210,7 @@
         </p>
       </section>
 
-      <!-- secccion 5: galeria areas comunes -->
+      <!-- Seccion 3.b: galeria areas comunes -->
       <div id="carouselExampleIndicators" class="carousel slide carousel-slide">
         <div class="carousel-indicators">
           <button
@@ -232,6 +245,18 @@
             data-bs-slide-to="4"
             aria-label="Slide 5"
           ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="5"
+            aria-label="Slide 6"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="6"
+            aria-label="Slide 7"
+          ></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -264,7 +289,21 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/habitaciones/piscina.jpg"
+              src="./img/habitaciones/pisicina-1.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./img/habitaciones/piscina-noche.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./img/habitaciones/patio.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -295,12 +334,13 @@
     <footer>
       <div class="footer-content">
         <p>
-          &copy; 2023 Loreto Guest House Yayetopa. Todos los derechos
+          &copy; 2025 Loreto Guest House Yayetopa. <br />Todos los derechos
           reservados.
         </p>
-        <p>Desarrollado por Tomas Alegre</p>
+        <img src="../../img/logos/logo-blanco.png" alt="" />
       </div>
     </footer>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
