correccion de rutas en img

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           &copy; 2025 Loreto Guest House Yayetopa. <br />Todos los derechos
           reservados.
         </p>
-        <img src="../../img/logos/logo-blanco.png" alt="" />
+        <img src="../img/logos/logo-blanco.png" alt="" />
       </div>
     </footer>
 
