2da correccion de ruta

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- icono del sitio -->
     <link
       rel="icon"
-      href="../img/logos/perfil facebook 170px x 170px.jpg"
+      href="./img/logos/perfil facebook 170px x 170px.jpg"
       type="image/x-icon"
     />
 
