--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       type="image/x-icon"
     />
 
-    <!-- Style -->
-    <link rel="stylesheet" href="./css/main.css" />
-
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -21,6 +18,10 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+
+    <!-- Style -->
+    <link rel="stylesheet" href="./css/main.css" />
+
 
     <title>Loreto Guest House Yayetopa</title>
   </head>
@@ -43,7 +44,7 @@
             <li><a href="./pages/quienes-somos.html">QUIENES SOMOS</a></li>
             <li><a href="./pages/habitaciones.html">HABITACIONES</a></li>
             <li><a href="./pages/direccion.html">DIRECCION</a></li>
-            <li><a href="./pages/contacto.html">CONTACTO</a></li>
+            <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
       </div>
@@ -55,21 +56,35 @@
       </div>
 
       <!-- menu bamburguesa -->
-      <div class="dropdown menu-hamburguesa">
-        <a
-          class="btn btn-secondary dropdown-toggle"
-          href="#"
-          role="button"
+      <div class="btn-group">
+        <button
+          class="btn btn-secondary dropdown-toggle bg-success"
+          type="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          Dropdown link
-        </a>
-
+          Menu
+        </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
+          <li><a class="dropdown-item" href="index.html">Inicio</a></li>
+          <li>
+            <a class="dropdown-item" href="./pages/quienes-somos.html"
+              >Quienes Somos</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/habitaciones.html"
+              >Habitaciones</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/actividades.html"
+              >Actividades</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -92,7 +107,15 @@
             Yayetopa: porque el verdadero viaje es el que nos devuelve a
             nosotros mismos.
           </p>
-          <a class="btn btn-primary" href="#" role="button">Reservá ahora</a>
+          <!-- Botón WhatsApp -->
+          <a
+            href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+            target="_blank"
+            class="whatsapp-btn"
+          >
+            <i class="fab fa-whatsapp"></i>
+            <span>Consultas directas</span>
+          </a>
         </div>
       </section>
 
@@ -176,11 +199,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="centrar-boton">
-        <a class="btn btn-primary btn-reserva" href="#" role="button"
-          >Reservá ahora</a
-        >
       </div>
 
       <!-- Seccion 3: areas comunes -->
