--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -3,7 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <!-- icono del sitio -->
+    <link
+      rel="icon"
+      href="../img/logos/perfil facebook 170px x 170px.jpg"
+      type="image/x-icon"
+    />
+
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+
+    <!-- Style -->
+    <link rel="stylesheet" href="/css/main.css" />
+
+    
+    <!-- Animaciones -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <title>Direccion</title>
   </head>
   <body>
     <header>
@@ -21,10 +47,10 @@
         <nav class="nav-header">
           <ul>
             <li><a href="../index.html">INICIO</a></li>
-            <li><a href="./pages/quienes-somos.html">QUIENES SOMOS</a></li>
-            <li><a href="./pages/habitaciones.html">HABITACIONES</a></li>
-            <li><a href="./pages/direccion.html">DIRECCION</a></li>
-            <li><a href="./pages/contacto.html">CONTACTO</a></li>
+            <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
+            <li><a href="habitaciones.html">HABITACIONES</a></li>
+            <li><a href="direccion.html">DIRECCION</a></li>
+            <li><a href="actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
       </div>
@@ -32,49 +58,79 @@
       <!-- Titulo -->
       <div class="texto-header">
         <h1>DIRECCION</h1>
-        <p>
-        </p>
+        <p>Estrategicamente ubicado, a metros de la avenida principal</p>
       </div>
 
       <!-- menu hamburguesa -->
-      <div class="dropdown menu-hamburguesa">
-        <a
-          class="btn btn-secondary dropdown-toggle"
-          href="#"
-          role="button"
+      <div class="btn-group">
+        <button
+          class="btn btn-secondary dropdown-toggle bg-success"
+          type="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
           Menu
-        </a>
-
+        </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
-          <li>
-            <a class="dropdown-item" href="./quienes-somos.html"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./habitaciones.html">Habitaciones</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="./direccion.html">Direccion</a>
-          </li>
-          <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+          <li><a class="dropdown-item" href="index.html">Inicio</a></li>
+          <li><a class="dropdown-item" href="./pages/quienes-somos.html">Quienes Somos</a></li>
+          <li><a class="dropdown-item" href="./pages/habitaciones.html">Habitaciones</a></li>
+          <li><a class="dropdown-item" href="./pages/direccion.html">Direccion</a></li>
+          <li><a class="dropdown-item" href="./pages/actividades.html">Actividades</a></li>
         </ul>
       </div>
     </header>
 
     <!-- principal -->
     <main>
-      <div class="titulo-direccion">
-        <h2>DIRECCION</h2>
-      </div>
-
-      <div class="parrafo-direccion">
-        <p></p>
-      </div>
+      <!-- seccion de mapa  -->
+      <section class="direccion-contacto container my-5 animate__animated animate__backInUp">
+        <div class="row">
+          <!-- Columna izquierda -->
+          <div class="col-12 col-md-6 mb-4 titulo-lista">
+            <h2>Contacto</h2>
+            <ul>
+              <li>📞 Teléfono: (+54) 9 3781 49-1705</li>
+              <li>✉️ Email: correo@ejemplo.com</li>
+              <li>📍 Dirección: Calle Brasil, Loreto, Corrientes.</li>
+              <li>🌐 Redes Sociales: Instagram, Facebook</li>
+            </ul>
+          </div>
+          <!-- Columna derecha -->
+          <div class="col-12 col-md-6 mb-4">
+            <h2 class="titulo-ubicacion">Ubicación</h2>
+            <div class="map-container">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3530.19298663137!2d-57.2799974!3d-27.773027199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9450c192d99f0a39%3A0x9ce143cbb1a8047f!2sLoreto%20Guest%20House%20(Yayetopa)!5e0!3m2!1ses-419!2sar!4v1748791979664!5m2!1ses-419!2sar"
+                width="650"
+                height="455"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <!-- footer -->
+    <footer>
+      <div class="footer-content">
+        <p>
+          &copy; 2025 Loreto Guest House Yayetopa. <br />Todos los derechos
+          reservados.
+        </p>
+        <img src="../img/logos/logo-blanco.png" alt="" />
+      </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
