--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -11,9 +11,6 @@
       type="image/x-icon"
     />
 
-    <!-- Style -->
-    <link rel="stylesheet" href="../css/main.css" />
-
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -21,6 +18,9 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+
+    <!-- Style -->
+    <link rel="stylesheet" href="/css/main.css" />
 
     <!-- Lightbox CSS -->
     <link
@@ -55,7 +55,7 @@
             <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
             <li><a href="habitaciones.html">HABITACIONES</a></li>
             <li><a href="direccion.html">DIRECCION</a></li>
-            <li><a href="contacto.html">CONTACTO</a></li>
+            <li><a href="actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
       </div>
@@ -70,31 +70,21 @@
       </div>
 
       <!-- menu hamburguesa -->
-      <div class="dropdown menu-hamburguesa">
-        <a
-          class="btn btn-secondary dropdown-toggle"
-          href="#"
-          role="button"
+      <div class="btn-group">
+        <button
+          class="btn btn-secondary dropdown-toggle bg-success"
+          type="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
           Menu
-        </a>
-
+        </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
-          <li>
-            <a class="dropdown-item" href="./quienes-somos.html"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./habitaciones.html">Habitaciones</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="./direccion.html">Direccion</a>
-          </li>
-          <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+          <li><a class="dropdown-item" href="index.html">Inicio</a></li>
+          <li><a class="dropdown-item" href="./pages/quienes-somos.html">Quienes Somos</a></li>
+          <li><a class="dropdown-item" href="./pages/habitaciones.html">Habitaciones</a></li>
+          <li><a class="dropdown-item" href="./pages/direccion.html">Direccion</a></li>
+          <li><a class="dropdown-item" href="./pages/actividades.html">Actividades</a></li>
         </ul>
       </div>
     </header>
@@ -162,9 +152,15 @@
             <p class="mt-3 text-muted">
               Breve descripcion sobre la habitacion y el porque del nombre.
             </p>
-            <button class="btn btn-outline-primary mt-3 px-4 py-2">
-              <i class="fas fa-calendar-alt me-2"></i> Reservar ahora
-            </button>
+          <!-- Botón WhatsApp -->
+          <a
+            href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+            target="_blank"
+            class="whatsapp-btn"
+          >
+            <i class="fab fa-whatsapp"></i>
+            <span>Reserva ahora</span>
+          </a>
           </div>
         </div>
       </div>
@@ -181,9 +177,15 @@
               size, terraza privada y baño con ducha exterior. Disfrute de la
               naturaleza en su máxima expresión con nuestro diseño bioclimático.
             </p>
-            <button class="btn btn-outline-primary mt-3 px-4 py-2">
-              <i class="fas fa-calendar-alt me-2"></i> Reservar ahora
-            </button>
+          <!-- Botón WhatsApp -->
+          <a
+            href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+            target="_blank"
+            class="whatsapp-btn"
+          >
+            <i class="fab fa-whatsapp"></i>
+            <span>Reserva ahora</span>
+          </a>
           </div>
 
           <!-- Columna derecha (Fotos) -->
@@ -277,9 +279,15 @@
             <p class="mt-3 text-muted">
               Breve descripcion sobre la habitacion y el porque del nombre.
             </p>
-            <button class="btn btn-outline-primary mt-3 px-4 py-2">
-              <i class="fas fa-calendar-alt me-2"></i> Reservar ahora
-            </button>
+          <!-- Botón WhatsApp -->
+          <a
+            href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+            target="_blank"
+            class="whatsapp-btn"
+          >
+            <i class="fab fa-whatsapp"></i>
+            <span>Reserva ahora</span>
+          </a>
           </div>
         </div>
       </div>
