--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -11,9 +11,6 @@
       type="image/x-icon"
     />
 
-    <!-- Style -->
-    <link rel="stylesheet" href="../css/main.css" />
-
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -21,6 +18,9 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+
+    <!-- Style -->
+    <link rel="stylesheet" href="/css/main.css" />
 
     <title>Quienes Somos</title>
   </head>
@@ -43,7 +43,7 @@
             <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
             <li><a href="habitaciones.html">HABITACIONES</a></li>
             <li><a href="direccion.html">DIRECCION</a></li>
-            <li><a href="contacto.html">CONTACTO</a></li>
+            <li><a href="actividades.html">ACTIVIDADES</a></li>
           </ul>
         </nav>
       </div>
@@ -58,31 +58,21 @@
       </div>
 
       <!-- menu hamburguesa -->
-      <div class="dropdown menu-hamburguesa">
-        <a
-          class="btn btn-secondary dropdown-toggle"
-          href="#"
-          role="button"
+      <div class="btn-group">
+        <button
+          class="btn btn-secondary dropdown-toggle bg-success"
+          type="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
           Menu
-        </a>
-
+        </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
-          <li>
-            <a class="dropdown-item" href="./quienes-somos.html"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./habitaciones.html">Habitaciones</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="./direccion.html">Direccion</a>
-          </li>
-          <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+          <li><a class="dropdown-item" href="./quienes-somos.html">Quienes Somos</a></li>
+          <li><a class="dropdown-item" href="./pages/habitaciones.html">Habitaciones</a></li>
+          <li><a class="dropdown-item" href="./pages/direccion.html">Direccion</a></li>
+          <li><a class="dropdown-item" href="./pages/actividades.html">Actividades</a></li>
         </ul>
       </div>
     </header>
