correcion de rutas 6

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -19,9 +19,6 @@
       crossorigin="anonymous"
     />
 
-    <!-- Style -->
-    <link rel="stylesheet" href="/css/main.css" />
-
     <!-- Lightbox CSS -->
     <link
       rel="stylesheet"
@@ -33,6 +30,9 @@
 
     <!-- Lightbox JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
+    <!-- Style -->
+    <link rel="stylesheet" href="/css/main.css" />
 
     <title>Habitaciones</title>
   </head>
@@ -81,10 +81,24 @@
         </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-          <li><a class="dropdown-item" href="./pages/quienes-somos.html">Quienes Somos</a></li>
-          <li><a class="dropdown-item" href="./pages/habitaciones.html">Habitaciones</a></li>
-          <li><a class="dropdown-item" href="./pages/direccion.html">Direccion</a></li>
-          <li><a class="dropdown-item" href="./pages/actividades.html">Actividades</a></li>
+          <li>
+            <a class="dropdown-item" href="./pages/quienes-somos.html"
+              >Quienes Somos</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/habitaciones.html"
+              >Habitaciones</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/actividades.html"
+              >Actividades</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -112,35 +126,47 @@
               <!-- gutter (espacio) entre fotos -->
               <!-- Foto principal (grande) -->
               <div class="col-12">
-                <a href="../img/habitaciones/yetapa-alta.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/yetapa-alta.jpg"
-                  class="img-fluid rounded shadow-lg"
-                  alt="Foto principal de la habitación Yetapa"
-                  style="height: 400px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/yetapa-alta.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/yetapa-alta.jpg"
+                    class="img-fluid rounded shadow-lg"
+                    alt="Foto principal de la habitación Yetapa"
+                    style="height: 400px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
 
               <!-- Fotos secundarias -->
               <div class="col-md-6">
-                    <a href="../img/habitaciones/yetapa-cama.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/yetapa-cama.jpg"
-                  class="img-fluid rounded shadow"
-                  alt="Fotografía de la cama en la habitación Yetapa"
-                  style="height: 200px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/yetapa-cama.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/yetapa-cama.jpg"
+                    class="img-fluid rounded shadow"
+                    alt="Fotografía de la cama en la habitación Yetapa"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
               <div class="col-md-6">
-                <a href="../img/habitaciones/yetapa-baja.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/yetapa-baja.jpg"
-                  class="img-fluid rounded shadow"
-                  alt="Fotografía de la habitación Yetapa"
-                  style="height: 200px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/yetapa-baja.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/yetapa-baja.jpg"
+                    class="img-fluid rounded shadow"
+                    alt="Fotografía de la habitación Yetapa"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
             </div>
@@ -152,15 +178,15 @@
             <p class="mt-3 text-muted">
               Breve descripcion sobre la habitacion y el porque del nombre.
             </p>
-          <!-- Botón WhatsApp -->
-          <a
-            href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
-            target="_blank"
-            class="whatsapp-btn"
-          >
-            <i class="fab fa-whatsapp"></i>
-            <span>Reserva ahora</span>
-          </a>
+            <!-- Botón WhatsApp -->
+            <a
+              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              target="_blank"
+              class="whatsapp-btn"
+            >
+              <i class="fab fa-whatsapp"></i>
+              <span>Reserva ahora</span>
+            </a>
           </div>
         </div>
       </div>
@@ -177,15 +203,15 @@
               size, terraza privada y baño con ducha exterior. Disfrute de la
               naturaleza en su máxima expresión con nuestro diseño bioclimático.
             </p>
-          <!-- Botón WhatsApp -->
-          <a
-            href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
-            target="_blank"
-            class="whatsapp-btn"
-          >
-            <i class="fab fa-whatsapp"></i>
-            <span>Reserva ahora</span>
-          </a>
+            <!-- Botón WhatsApp -->
+            <a
+              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              target="_blank"
+              class="whatsapp-btn"
+            >
+              <i class="fab fa-whatsapp"></i>
+              <span>Reserva ahora</span>
+            </a>
           </div>
 
           <!-- Columna derecha (Fotos) -->
@@ -194,35 +220,47 @@
             <div class="row g-3">
               <!-- Foto principal (grande) -->
               <div class="col-12">
-                  <a href="../img/habitaciones/martin-pescador.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/martin-pescador.jpg"
-                  class="img-fluid rounded shadow-lg"
-                  alt="Habitación Principal"
-                  style="height: 400px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/martin-pescador.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/martin-pescador.jpg"
+                    class="img-fluid rounded shadow-lg"
+                    alt="Habitación Principal"
+                    style="height: 400px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
 
               <!-- Fotos secundarias -->
               <div class="col-md-6">
-                <a href="../img/habitaciones/martin-pescador.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/martin-pescador.jpg"
-                  class="img-fluid rounded shadow"
-                  alt="Detalle Baño"
-                  style="height: 200px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/martin-pescador.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/martin-pescador.jpg"
+                    class="img-fluid rounded shadow"
+                    alt="Detalle Baño"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
               <div class="col-md-6">
-                <a href="../img/habitaciones/martin-pescador.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/martin-pescador.jpg"
-                  class="img-fluid rounded shadow"
-                  alt="Vista al Esteros"
-                  style="height: 200px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/martin-pescador.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/martin-pescador.jpg"
+                    class="img-fluid rounded shadow"
+                    alt="Vista al Esteros"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
             </div>
@@ -239,35 +277,47 @@
               <!-- gutter (espacio) entre fotos -->
               <!-- Foto principal (grande) -->
               <div class="col-12">
-                <a href="../img/habitaciones/jabiru.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/jabiru.jpg"
-                  class="img-fluid rounded shadow-lg"
-                  alt="Habitación Principal"
-                  style="height: 400px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/jabiru.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/jabiru.jpg"
+                    class="img-fluid rounded shadow-lg"
+                    alt="Habitación Principal"
+                    style="height: 400px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
 
               <!-- Fotos secundarias -->
               <div class="col-md-6">
-                <a href="../img/habitaciones/jabiru.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/jabiru.jpg"
-                  class="img-fluid rounded shadow"
-                  alt="Detalle Baño"
-                  style="height: 200px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/jabiru.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/jabiru.jpg"
+                    class="img-fluid rounded shadow"
+                    alt="Detalle Baño"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
               <div class="col-md-6">
-                <a href="../img/habitaciones/jabiru.jpg" data-lightbox="-" data-title="-">
-                <img
-                  src="../img/habitaciones/jabiru.jpg"
-                  class="img-fluid rounded shadow"
-                  alt="Vista al Esteros"
-                  style="height: 200px; width: 100%; object-fit: cover"
-                />
+                <a
+                  href="../img/habitaciones/jabiru.jpg"
+                  data-lightbox="-"
+                  data-title="-"
+                >
+                  <img
+                    src="../img/habitaciones/jabiru.jpg"
+                    class="img-fluid rounded shadow"
+                    alt="Vista al Esteros"
+                    style="height: 200px; width: 100%; object-fit: cover"
+                  />
                 </a>
               </div>
             </div>
@@ -279,15 +329,15 @@
             <p class="mt-3 text-muted">
               Breve descripcion sobre la habitacion y el porque del nombre.
             </p>
-          <!-- Botón WhatsApp -->
-          <a
-            href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
-            target="_blank"
-            class="whatsapp-btn"
-          >
-            <i class="fab fa-whatsapp"></i>
-            <span>Reserva ahora</span>
-          </a>
+            <!-- Botón WhatsApp -->
+            <a
+              href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+              target="_blank"
+              class="whatsapp-btn"
+            >
+              <i class="fab fa-whatsapp"></i>
+              <span>Reserva ahora</span>
+            </a>
           </div>
         </div>
       </div>
