--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -19,15 +19,14 @@
       crossorigin="anonymous"
     />
 
-    <!-- Style -->
-    <link rel="stylesheet" href="/css/main.css" />
-
-    
     <!-- Animaciones -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
+    <!-- Style -->
+    <link rel="stylesheet" href="/css/main.css" />
 
     <title>Direccion</title>
   </head>
@@ -73,10 +72,24 @@
         </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-          <li><a class="dropdown-item" href="./pages/quienes-somos.html">Quienes Somos</a></li>
-          <li><a class="dropdown-item" href="./pages/habitaciones.html">Habitaciones</a></li>
-          <li><a class="dropdown-item" href="./pages/direccion.html">Direccion</a></li>
-          <li><a class="dropdown-item" href="./pages/actividades.html">Actividades</a></li>
+          <li>
+            <a class="dropdown-item" href="./pages/quienes-somos.html"
+              >Quienes Somos</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/habitaciones.html"
+              >Habitaciones</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/actividades.html"
+              >Actividades</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -84,7 +97,9 @@
     <!-- principal -->
     <main>
       <!-- seccion de mapa  -->
-      <section class="direccion-contacto container my-5 animate__animated animate__backInUp">
+      <section
+        class="direccion-contacto container my-5 animate__animated animate__backInUp"
+      >
         <div class="row">
           <!-- Columna izquierda -->
           <div class="col-12 col-md-6 mb-4 titulo-lista">
