--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -69,10 +69,24 @@
         </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
-          <li><a class="dropdown-item" href="./quienes-somos.html">Quienes Somos</a></li>
-          <li><a class="dropdown-item" href="./pages/habitaciones.html">Habitaciones</a></li>
-          <li><a class="dropdown-item" href="./pages/direccion.html">Direccion</a></li>
-          <li><a class="dropdown-item" href="./pages/actividades.html">Actividades</a></li>
+          <li>
+            <a class="dropdown-item" href="./quienes-somos.html"
+              >Quienes Somos</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/habitaciones.html"
+              >Habitaciones</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="./pages/actividades.html"
+              >Actividades</a
+            >
+          </li>
         </ul>
       </div>
     </header>
