--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -20,7 +20,7 @@
     />
 
     <!-- Style -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <title>Quienes Somos</title>
   </head>
