--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -26,7 +26,7 @@
     />
 
     <!-- Style -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <title>Direccion</title>
   </head>
