correccion de rutas, tamaño de fuentes, cambio de menu hamb

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- Style -->
     <link rel="stylesheet" href="./css/main.css" />
 
+    <!-- js -->
+    <script defer src="./js/menu-hamburgesa.js"></script>
 
     <title>Loreto Guest House Yayetopa</title>
   </head>
@@ -35,6 +37,22 @@
             alt="Logo de Loreto Guest House Yayetopa"
           />
         </div>
+
+        <!-- menu bamburguesa -->
+        <div class="hamburger">
+          <div class="_layer -top"></div>
+          <div class="_layer -mid"></div>
+          <div class="_layer -bottom"></div>
+        </div>
+        <nav class="menuppal">
+          <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./pages/quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="./pages/habitaciones.html">Habitaciones</a></li>
+            <li><a href="./pages/direccion.html">Direccion</a></li>
+            <li><a href="./pages/actividades.html">Actividades</a></li>
+          </ul>
+        </nav>
 
         <!-- nav bar -->
 
@@ -54,39 +72,6 @@
         <h1>LORETO GUEST HOUSE YAYETOPA</h1>
         <p>Tu hogar lejos de casa</p>
       </div>
-
-      <!-- menu bamburguesa -->
-      <div class="btn-group">
-        <button
-          class="btn btn-secondary dropdown-toggle bg-success"
-          type="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          Menu
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-          <li>
-            <a class="dropdown-item" href="./pages/quienes-somos.html"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/habitaciones.html"
-              >Habitaciones</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/actividades.html"
-              >Actividades</a
-            >
-          </li>
-        </ul>
-      </div>
     </header>
 
     <!-- principal -->
@@ -99,13 +84,13 @@
             el Iberá te abraza.
           </h2>
           <p>
-            Aquí, donde el agua se une con el cielo y la tierra respira vida, no
-            eres un turista: eres parte del ciclo. <br />
+            Aquí, donde el agua se une con el cielo y la tierra respira vida,<br />
+            no eres un turista: eres parte del ciclo. <br />
             Alójate con quienes comprenden tu pasión por la naturaleza. <br />
             Duerme escuchando a los zorzales cantar. <br />
             Despiértate con el rocío dibujando huellas efímeras. <br />
-            Yayetopa: porque el verdadero viaje es el que nos devuelve a
-            nosotros mismos.
+            Yayetopa: porque el verdadero viaje<br />
+            es el que nos devuelve a nosotros mismos.
           </p>
           <!-- Botón WhatsApp -->
           <a
@@ -122,13 +107,13 @@
       <!-- Seccion 2: habitaciones -->
       <section class="texto-habitaciones">
         <div class="texto-section2">
-          <h2>Habitaciones</h2>
+          <h2>HABITACIONES</h2>
           <p>
-            En Loreto Guest House, cada habitación es un refugio de paz y
-            confort.<br />
+            En Loreto Guest House, cada habitación<br />
+            es un refugio de paz y confort.<br />
             Diseñadas para ofrecerte una experiencia única, <br />
-            nuestras habitaciones combinan la calidez del hogar con las
-            comodidades de un hotel boutique.
+            nuestras habitaciones combinan la calidez del hogar <br />
+            con las comodidades de un hotel boutique.
           </p>
         </div>
       </section>
@@ -204,7 +189,7 @@
       <!-- Seccion 3: areas comunes -->
       <section class="texto-areas-comunes">
         <div class="texto-section4">
-          <h2>Areas comunes</h2>
+          <h2>AREAS COMUNES</h2>
           <p>
             Nuestros espacios compartidos crean comunidad, <br />
             nuestras áreas comunes están diseñadas para encuentros auténticos
@@ -215,16 +200,16 @@
       <!-- Seccion 3.a: texto -->
       <section class="parrafo-areas-comunes">
         <p>
-          Refrescate en la piscina, comparte historias en los cómodos sofás de
-          la sala o <br />
+          Refrescate en la piscina, comparte historias<br />
+          en los cómodos sofás de la sala o <br />
           disfruta un asado bajo las estrellas en la parrilla.
           <br />
-          Los corredores sombreados y el jardín con casitas de pájaros te
-          conectan con la naturaleza, <br />
-          mientras la cocina equipada y el WiFi gratuito ofrecen ese balance
-          perfecto entre aventura y comodidad. <br />
-          El verdadero lujo es sentirse como en casa, rodeado de nuevos amigos y
-          paisajes inolvidables.
+          Los corredores sombreados y el jardín con casitas de pájaros<br />
+          te conectan con la naturaleza, <br />
+          mientras la cocina equipada y el WiFi gratuito<br />
+          ofrecen ese balance perfecto entre aventura y comodidad. <br />
+          El verdadero lujo es sentirse como en casa,<br />
+          rodeado de nuevos amigos y paisajes inolvidables.
         </p>
       </section>
 
