--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -34,6 +34,9 @@
     <!-- Style -->
     <link rel="stylesheet" href="../css/main.css" />
 
+    <!-- js -->
+    <script defer src="../js/menu-hamburgesa.js"></script>
+
     <title>Habitaciones</title>
   </head>
   <body>
@@ -46,6 +49,22 @@
             alt="Logo de Loreto Guest House Yayetopa"
           />
         </div>
+
+        <!-- menu bamburguesa -->
+        <div class="hamburger">
+          <div class="_layer -top"></div>
+          <div class="_layer -mid"></div>
+          <div class="_layer -bottom"></div>
+        </div>
+        <nav class="menuppal">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="habitaciones.html">Habitaciones</a></li>
+            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="actividades.html">Actividades</a></li>
+          </ul>
+        </nav>
 
         <!-- nav bar -->
 
@@ -67,39 +86,6 @@
           Conocé nuestras habitaciones y elegí la que más te guste <br />
           para disfrutar de una estadía única.
         </p>
-      </div>
-
-      <!-- menu hamburguesa -->
-      <div class="btn-group">
-        <button
-          class="btn btn-secondary dropdown-toggle bg-success"
-          type="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          Menu
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-          <li>
-            <a class="dropdown-item" href="./pages/quienes-somos.html"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/habitaciones.html"
-              >Habitaciones</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/actividades.html"
-              >Actividades</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
 
