--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -28,6 +28,9 @@
     <!-- Style -->
     <link rel="stylesheet" href="../css/main.css" />
 
+    <!-- js -->
+    <script defer src="../js/menu-hamburgesa.js"></script>
+
     <title>Direccion</title>
   </head>
   <body>
@@ -40,6 +43,22 @@
             alt="Logo de Loreto Guest House Yayetopa"
           />
         </div>
+
+        <!-- menu bamburguesa -->
+        <div class="hamburger">
+          <div class="_layer -top"></div>
+          <div class="_layer -mid"></div>
+          <div class="_layer -bottom"></div>
+        </div>
+        <nav class="menuppal">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="habitaciones.html">Habitaciones</a></li>
+            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="actividades.html">Actividades</a></li>
+          </ul>
+        </nav>
 
         <!-- nav bar -->
 
@@ -59,39 +78,6 @@
         <h1>DIRECCION</h1>
         <p>Estrategicamente ubicado, a metros de la avenida principal</p>
       </div>
-
-      <!-- menu hamburguesa -->
-      <div class="btn-group">
-        <button
-          class="btn btn-secondary dropdown-toggle bg-success"
-          type="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          Menu
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-          <li>
-            <a class="dropdown-item" href="./pages/quienes-somos.html"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/habitaciones.html"
-              >Habitaciones</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/actividades.html"
-              >Actividades</a
-            >
-          </li>
-        </ul>
-      </div>
     </header>
 
     <!-- principal -->
@@ -103,7 +89,7 @@
         <div class="row">
           <!-- Columna izquierda -->
           <div class="col-12 col-md-6 mb-4 titulo-lista">
-            <h2>Contacto</h2>
+            <h2 class="titulo-contacto">Contacto</h2>
             <ul>
               <li>📞 Teléfono: (+54) 9 3781 49-1705</li>
               <li>✉️ Email: correo@ejemplo.com</li>
