--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -22,6 +22,9 @@
     <!-- Style -->
     <link rel="stylesheet" href="../css/main.css" />
 
+    <!-- js -->
+    <script defer src="../js/menu-hamburgesa.js"></script>
+
     <title>Quienes Somos</title>
   </head>
   <body>
@@ -34,6 +37,22 @@
             alt="Logo de Loreto Guest House Yayetopa"
           />
         </div>
+
+        <!-- menu bamburguesa -->
+        <div class="hamburger">
+          <div class="_layer -top"></div>
+          <div class="_layer -mid"></div>
+          <div class="_layer -bottom"></div>
+        </div>
+        <nav class="menuppal">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="quienes-somos.html">Quienes Somos</a></li>
+            <li><a href="habitaciones.html">Habitaciones</a></li>
+            <li><a href="direccion.html">Direccion</a></li>
+            <li><a href="actividades.html">Actividades</a></li>
+          </ul>
+        </nav>
 
         <!-- nav bar -->
 
@@ -55,39 +74,6 @@
           Loreto Guest House<br />
           Combina la comodidad del hogar con la magia de los Esteros.
         </p>
-      </div>
-
-      <!-- menu hamburguesa -->
-      <div class="btn-group">
-        <button
-          class="btn btn-secondary dropdown-toggle bg-success"
-          type="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          Menu
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
-          <li>
-            <a class="dropdown-item" href="./quienes-somos.html"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/habitaciones.html"
-              >Habitaciones</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/direccion.html">Direccion</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="./pages/actividades.html"
-              >Actividades</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
 
@@ -112,7 +98,14 @@
           naturaleza." <br />Kuni, Fundadora y guardiana de este sueño.
         </p>
 
-        <a class="btn btn-primary" href="#" role="button">Reservá ahora</a>
+        <a
+          href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
+          target="_blank"
+          class="whatsapp-btn"
+        >
+          <i class="fab fa-whatsapp"></i>
+          <span>Consultas directas</span>
+        </a>
       </div>
 
       <!-- instalaciones -->
