--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
+
     <!-- icono del sitio -->
     <link
       rel="icon"
@@ -68,7 +70,7 @@
       </div>
 
       <!-- Titulo -->
-      <div class="texto-header">
+      <div class="texto-header" data-aos="fade-up">
         <h1>LORETO GUEST HOUSE YAYETOPA</h1>
         <p>Tu hogar lejos de casa</p>
       </div>
@@ -350,5 +352,12 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
+
+    <!-- aos -->
+    <script>
+      AOS.init({
+        duration: 1200,
+      });
+    </script>
   </body>
 </html>
