--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -25,6 +25,12 @@
     <!-- js -->
     <script defer src="../js/menu-hamburgesa.js"></script>
 
+    <!-- Animaciones -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <title>Actividades</title>
   </head>
   <body>
