--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -34,6 +34,12 @@
     <!-- Style -->
     <link rel="stylesheet" href="../css/main.css" />
 
+    <!-- Animaciones -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <!-- js -->
     <script defer src="../js/menu-hamburgesa.js"></script>
 
