correccion de rutas, para entrega. Dar una ultima vuelta por todas las paginas para ver si hay errores

--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
           <p>
             En Loreto Guest House, cada habitación<br />
             es un refugio de paz y confort.<br />
-            Diseñadas para ofrecerte una experiencia única, <br />
-            nuestras habitaciones combinan la calidez del hogar <br />
-            con las comodidades de un hotel boutique.
+            Diseñadas para ofrecerte una experiencia única.
           </p>
         </div>
       </section>
@@ -266,7 +264,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./img/habitaciones/sala-1.jpg"
+              src="./img/sala-1.jpg"
               class="d-block w-100"
               alt="..."
             />
