--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -7,7 +7,7 @@
     <!-- icono del sitio -->
     <link
       rel="icon"
-      href="../img/logos/perfil facebook 170px x 170px.jpg"
+      href="../img/logos/logo-blanco.png"
       type="image/x-icon"
     />
 
@@ -83,7 +83,7 @@
     <main>
       <div class="activity-card">
         <img
-          src="/img/paseo-en-botes.jpg"
+          src="../img/paseo-en-botes.jpg"
           class="activity-img"
           alt="Paseo en lancha"
         />
@@ -107,7 +107,7 @@
 
       <div class="activity-card">
         <img
-          src="/img/paseo-en-botes.jpg"
+          src="../img/paseo-en-botes.jpg"
           class="activity-img"
           alt="Paseo en lancha"
         />
@@ -131,7 +131,7 @@
 
       <div class="activity-card">
         <img
-          src="/img/paseo-en-botes.jpg"
+          src="../img/paseo-en-botes.jpg"
           class="activity-img"
           alt="Paseo en lancha"
         />
@@ -155,7 +155,7 @@
 
       <div class="activity-card">
         <img
-          src="/img/paseo-en-botes.jpg"
+          src="../img/paseo-en-botes.jpg"
           class="activity-img"
           alt="Paseo en lancha"
         />
@@ -185,7 +185,7 @@
           &copy; 2025 Loreto Guest House Yayetopa. <br />Todos los derechos
           reservados.
         </p>
-        <img src="/img/logos/logo-blanco.png" alt="" />
+        <img src="../img/logos/logo-blanco.png" alt="" />
       </div>
     </footer>
 
