correccion de rutas, y agregado de animaciones, controlar que ande todo bien

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- animaciones -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!-- icono del sitio -->
     <link
       rel="icon"
-      href="../img/logos/logo-blanco.png"
+      href="../img/logos/perfil facebook 170px x 170px.jpg"
       type="image/x-icon"
     />
 
@@ -39,7 +42,7 @@
       <div class="header-top">
         <div class="logo-header">
           <img
-            src="/img/logos/logo-blanco.png"
+            src="../img/logos/logo-blanco.png"
             alt="Logo de Loreto Guest House Yayetopa"
           />
         </div>
@@ -75,8 +78,8 @@
 
       <!-- Titulo -->
       <div class="texto-header">
-        <h1>ACTIVIDADES</h1>
-        <p>Las mejores propuestas para que disfutes al maximo tu estadia</p>
+        <h1 data-aos="zoom-in">ACTIVIDADES</h1>
+        <p data-aos="zoom-in">Las mejores propuestas para que disfutes al maximo tu estadia</p>
       </div>
     </header>
     <!-- principal -->
@@ -195,5 +198,13 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
+
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <!-- Inicializa AOS -->
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
