--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
+    <!-- animaciones -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- icono del sitio -->
     <link
@@ -70,16 +71,16 @@
       </div>
 
       <!-- Titulo -->
-      <div class="texto-header" data-aos="fade-up">
-        <h1>LORETO GUEST HOUSE YAYETOPA</h1>
-        <p>Tu hogar lejos de casa</p>
+      <div class="texto-header">
+        <h1  data-aos="zoom-in">LORETO GUEST HOUSE YAYETOPA</h1>
+        <p  data-aos="zoom-in">Tu hogar lejos de casa</p>
       </div>
     </header>
 
     <!-- principal -->
     <main>
       <!-- Seccion 1: texto -->
-      <section>
+      <section data-aos="fade-down">
         <div class="texto-section1">
           <h2>
             En Loreto Guest House, <br />
@@ -107,8 +108,8 @@
       </section>
 
       <!-- Seccion 2: habitaciones -->
-      <section class="texto-habitaciones">
-        <div class="texto-section2">
+      <section class="texto-habitaciones" >
+        <div class="texto-section2" data-aos="fade-right">
           <h2>HABITACIONES</h2>
           <p>
             En Loreto Guest House, cada habitación<br />
@@ -188,7 +189,7 @@
 
       <!-- Seccion 3: areas comunes -->
       <section class="texto-areas-comunes">
-        <div class="texto-section4">
+        <div class="texto-section4" data-aos="fade-left">
           <h2>AREAS COMUNES</h2>
           <p>
             Nuestros espacios compartidos crean comunidad, <br />
@@ -214,7 +215,7 @@
       </section>
 
       <!-- Seccion 3.b: galeria areas comunes -->
-      <div id="carouselExampleIndicators" class="carousel slide carousel-slide">
+      <div id="carouselExampleIndicators" class="carousel slide carousel-slide" data-aos="fade-up">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -263,11 +264,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              src="./img/sala-1.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="./img/sala-1.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
             <img
@@ -352,10 +349,11 @@
     ></script>
 
     <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <!-- Inicializa AOS -->
     <script>
-      AOS.init({
-        duration: 1200,
-      });
+      AOS.init();
     </script>
   </body>
 </html>
