--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- animaciones -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!-- icono del sitio -->
     <link
       rel="icon"
@@ -75,8 +78,8 @@
 
       <!-- Titulo -->
       <div class="texto-header">
-        <h1>QUIENES SOMOS</h1>
-        <p>
+        <h1 data-aos="zoom-in">QUIENES SOMOS</h1>
+        <p data-aos="zoom-in">
           Loreto Guest House<br />
           Combina la comodidad del hogar con la magia de los Esteros.
         </p>
@@ -86,28 +89,28 @@
     <!-- principal -->
     <main>
       <div class="texto-principal">
-        <h2 class="titulo-principal">
+        <h2 class="titulo-principal" data-aos="fade-down">
           Donde la autenticidad cobija al viajero
         </h2>
 
-        <p class="parrafo-principal">
+        <p class="parrafo-principal" data-aos="fade-up">
           Ubicados en la puerta de entrada a los Esteros del Iberá, somos más
           que un alojamiento: <br />un refugio creado por amantes de la
           naturaleza para quienes buscan conexión con lo esencial. <br />Cada
-          detalle honra el frágil ecosistema que nos rodea <br />Hospitalidad
-          guaraní, Yayetopa (reencuentro), es nuestra filosofía de bienvenida Lo
+          detalle honra el frágil ecosistema que nos rodea .Hospitalidad
+          guaraní, Yayetopa (reencuentro), <br /> es nuestra filosofía de bienvenida Lo
           que nos diferencia: <br />✔ Experiencias auténticas diseñadas por
           naturalistas locales <br />✔ Arquitectura que dialoga con el paisaje
           sin perturbarlo <br />✔ Compromiso con las comunidades del Iberá
           <br />"No somos anfitriones, somos compañeros de aventura en este
           rincón único del mundo, <br />donde el tiempo sigue el ritmo de la
-          naturaleza." <br />Kuni, Fundadora y guardiana de este sueño.
+          naturaleza." Kuni, Fundadora y guardiana de este sueño.
         </p>
 
         <a
           href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
           target="_blank"
-          class="whatsapp-btn"
+          class="whatsapp-btn" data-aos="fade-up"
         >
           <i class="fab fa-whatsapp"></i>
           <span>Consultas directas</span>
@@ -119,7 +122,7 @@
         <h2>INSTALACIONES</h2>
       </div>
       <div class="instalaciones">
-        <div class="lista-instalaciones">
+        <div class="lista-instalaciones" data-aos="fade-down">
           <ul>
             <li>
               -Cocina equipada y espaciosa para compartir en familia o con
@@ -160,5 +163,13 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
+
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <!-- Inicializa AOS -->
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
