aplicamos SEO en el index. Colocamos enlace en la img del footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
     <!-- js -->
     <script defer src="./js/menu-hamburgesa.js"></script>
 
-    <title>Loreto Guest House Yayetopa</title>
+    <title>
+      Loreto Guest House | Hospedaje en los Esteros del Iberá, Corrientes
+    </title>
+    <meta
+      name="description"
+      content="Alojamiento eco-friendly en Loreto, puerta de entrada a los Esteros del Iberá. Habitaciones cómodas, experiencias auténticas y conexión con la naturaleza."
+    />
+    <meta
+      name="keywords"
+      content="hospedaje iberá, alojamiento loreto, esteros del iberá, ecoturismo correntino, guest house argentina"
+    />
   </head>
   <body>
     <header>
@@ -72,8 +82,8 @@
 
       <!-- Titulo -->
       <div class="texto-header">
-        <h1  data-aos="zoom-in">LORETO GUEST HOUSE YAYETOPA</h1>
-        <p  data-aos="zoom-in">Tu hogar lejos de casa</p>
+        <h1 data-aos="zoom-in">LORETO GUEST HOUSE YAYETOPA</h1>
+        <p data-aos="zoom-in">Tu hogar lejos de casa</p>
       </div>
     </header>
 
@@ -108,7 +118,7 @@
       </section>
 
       <!-- Seccion 2: habitaciones -->
-      <section class="texto-habitaciones" >
+      <section class="texto-habitaciones">
         <div class="texto-section2" data-aos="fade-right">
           <h2>HABITACIONES</h2>
           <p>
@@ -215,7 +225,11 @@
       </section>
 
       <!-- Seccion 3.b: galeria areas comunes -->
-      <div id="carouselExampleIndicators" class="carousel slide carousel-slide" data-aos="fade-up">
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide carousel-slide"
+        data-aos="fade-up"
+      >
         <div class="carousel-indicators">
           <button
             type="button"
@@ -337,7 +351,9 @@
           &copy; 2025 Loreto Guest House Yayetopa. <br />Todos los derechos
           reservados.
         </p>
-        <img src="./img/logos/logo-blanco.png" alt="" />
+        <a href="index.html">
+        <img src="./img/logos/logo-blanco.png" alt="logo de loreto guest house"/>
+        </a>
       </div>
     </footer>
 
