--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -135,7 +135,7 @@
             </li>
             <li>-Televisión de pantalla plana</li>
             <li>
-              -Habitación con baño para personas con capacidades diferente
+              -Habitación con baño para personas con discapacidad
             </li>
           </ul>
         </div>
@@ -149,7 +149,9 @@
           &copy; 2025 Loreto Guest House Yayetopa. <br />Todos los derechos
           reservados.
         </p>
-        <img src="../img/logos/logo-blanco.png" alt="" />
+        <a href="../index.html">
+        <img src="../img/logos/logo-blanco.png" alt="logo loreto guest house" />
+        </a>
       </div>
     </footer>
 
