--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -188,7 +188,9 @@
           &copy; 2025 Loreto Guest House Yayetopa. <br />Todos los derechos
           reservados.
         </p>
-        <img src="../img/logos/logo-blanco.png" alt="" />
+        <a href="../index.html">
+        <img src="../img/logos/logo-blanco.png" alt="logo loreto guest house" />
+        </a>
       </div>
     </footer>
 
